fixed address gap on ipads

--- a/css/style.css
+++ b/css/style.css
@@ -2844,7 +2844,7 @@ p.cursor::after {
     max-width: 400px; /* Set a maximum width for each address item */
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1210px) {
     .mailing-address-container {
         gap: 16px; /* Reduce gap between the addresses when they are stacked */
     }
